# CCR_Projects

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md  collateral.csv  counterparty_reference.csv  sample_trades.csv
docs/: SA_CCR_Excel_Reconciliation_Workbook.xlsx  methodology.md  project_study_guide_cn.html  project_study_guide_cn.md  regulatory_alignment.md  sa_ccr_portfolio_report.html  sa_ccr_portfolio_report.md
outputs/: addon_detail.csv  asset_class_addon.csv  asset_class_summary.csv  counterparty_summary.csv  data_quality_issues.csv  netting_set_exposure.csv  trade_level_enriched.csv  unmargined_cap_exposure.csv
scripts/: build_industry_style_sample.py  build_saccr_sample_from_sdr.py  download_dtcc_sdr.py  generate_report.py  run_saccr.py
src/saccr_engine/: __init__.py  addon.py  config.py  data_checks.py  enrichment.py  exposure.py  pipeline.py  reporting.py
tests/: test_core_calculations.py
